Bug 2229 -  Long paths cut off for disk name in server screen
On-behalf-of: Eugene Matveyev <evgeniy.m@monterosa.co.uk>
Reviewed-on: http://review.northscale.com/2476
Tested-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>

--- a/deps/menelaus/priv/public/css/screen.css
+++ b/deps/menelaus/priv/public/css/screen.css
@@ -1036,7 +1036,7 @@ ul.tabs .alert_num_display .alert_num {display:block;}
 .additional_server_info {display:block;overflow:hidden;}
 .additional_server_info h3 {font-size:14px; color:#444245; padding:5px 0 10px 0; border-bottom:1px solid #bbbdbf; font-weight:normal; margin:0 0 10px 0;}
 .additional_server_info .info_block {display:block; overflow:hidden;}
-.additional_server_info .info_block .path {display:block; padding:2px 0 0 0; font-size:11px; /*color:#828284;*/}
+.additional_server_info .info_block .path {display:block;width:185px;padding:2px 0 0 0; font-size:11px;word-wrap:break-word;}
 .additional_server_info .info_block.last {padding:10px 0 10px 0;}
 .dynamic_ram {display:block; height:40px; padding:0 0 0 77px; background:url(../images/icons.png) -6px -190px no-repeat; float:left;}
 .total_ram {display:block; height:14px; text-align:right;}
